Fix hero section animation not full width on mobile

--- a/src/components/Homepage/Hero/styles.module.less
+++ b/src/components/Homepage/Hero/styles.module.less
@@ -1,31 +1,31 @@
 @import '../../../globalStyles/sections.module.less';
 
 .animationBaseStyling {
-  width: 100%;
+    width: 100%;
 
-  & > :first-child {
-      overflow: visible;
-      max-height: 80vh;
-      width: 100%;
-      height: 100%;
-  }
-
-  & > :not(:first-child) {
-      display: none;
-  }
-
-  @media (min-width: 1025px) {
-    & > :first-child {
-      width: 406.5px;
-      height: 365px;
+    &> :first-child {
+        overflow: visible;
+        max-height: 80vh;
+        width: 100%;
+        height: 100%;
     }
-  }
+
+    &> :not(:first-child) {
+        display: none;
+    }
+
+    @media (min-width: 1025px) {
+        &> :first-child {
+            width: 406.5px;
+            height: 365px;
+        }
+    }
 }
 
 .container {
     .sectionTopBottomPadding;
 
-    padding-top: 24px;
+    padding-top: 16px;
     display: flex;
     flex-direction: column;
     background-color: var(--dark-blue);
@@ -75,7 +75,7 @@
 
     @media (max-width: 1024px) {
         min-width: 20rem;
-        max-width: 100%;
+        width: 100%;
     }
 
     @media (max-width: 810px) {
@@ -91,7 +91,7 @@
     .globalMaxWidth;
     .sectionTopBottomPadding;
 
-    margin-top: 0;
+    margin-top: 16px;
     margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 24px;
